[package]
name = "binance-uni"
version = "0.1.0"
edition = "2021"

[dependencies]

## eth
artemis-core = { path = "../../artemis-core" }
bindings_binance_uni = { path = "bindings" }
ethers = { version = "2", features = ["ws", "rustls"] }

## async
async-trait = "0.1.64"

## misc
anyhow = "1.0.70"
tracing = "0.1.37"
reqwest = "0.11.18"
serde = { version = "1.0.164", features = ["derive"] }
